--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<title>WLZ by xplsv</title>
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
 			body {
 
@@ -32,7 +32,7 @@
 	<body>
 
 		<audio id="audio" autobuffer>
-			<source src="files/WLZ.ogg" type="audio/ogg; codecs=vorbis"> 
+			<source src="files/WLZ.ogg" type="audio/ogg; codecs=vorbis">
 		</audio>
 
 		<div id="launcher" style="padding: 100px;">
@@ -48,10 +48,10 @@
 			<span style="cursor:pointer;" onClick="start( 0 );">START</span>
 			<!--
 			<br /><br />
-			<a href="#" onClick="start( 0 );">PART 1</a>, 
-			<a href="#" onClick="start( 16 );">PART 2</a>, 
-			<a href="#" onClick="start( 24 );">PART 3</a>, 
-			<a href="#" onClick="start( 32 );">PART 4</a>, 
+			<a href="#" onClick="start( 0 );">PART 1</a>,
+			<a href="#" onClick="start( 16 );">PART 2</a>,
+			<a href="#" onClick="start( 24 );">PART 3</a>,
+			<a href="#" onClick="start( 32 );">PART 4</a>,
 			<a href="#" onClick="start( 40 );">PART 5</a>,
 			<a href="#" onClick="start( 48 );">PART 6</a>,
 			<a href="#" onClick="start( 56 );">PART 7</a>,
@@ -93,4 +93,4 @@
 		<script type="text/javascript" src="js/Main.js"></script>
 
 	</body>
-</html> 
+</html>
